--- a/dev-python/twisted-news/ChangeLog
+++ b/dev-python/twisted-news/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/twisted-news
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-news/ChangeLog,v 1.20 2008/03/12 18:27:50 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-news/ChangeLog,v 1.21 2008/05/13 21:00:00 hawking Exp $
+
+*twisted-news-8.0.0 (13 May 2008)
+
+  13 May 2008; Ali Polatel <hawking@gentoo.org> +twisted-news-8.0.0.ebuild:
+  Version bump.
 
   12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing Marien Zwart (marienz, #107204) from metadata.xml.
