--- a/app-xemacs/gentoo-syntax/ChangeLog
+++ b/app-xemacs/gentoo-syntax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-xemacs/gentoo-syntax
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-xemacs/cvs-repo/gentoo-x86/app-xemacs/gentoo-syntax/ChangeLog,v 1.5 2008/05/14 05:07:53 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-xemacs/cvs-repo/gentoo-x86/app-xemacs/gentoo-syntax/ChangeLog,v 1.6 2008/05/14 05:12:20 graaff Exp $
+
+  14 May 2008; Hans de Graaff <graaff@gentoo.org> gentoo-syntax-1.8.ebuild:
+  Mark stable on amd64, bug 222023
 
 *gentoo-syntax-1.9 (14 May 2008)
 
