--- a/kde-base/kdewebdev-meta/ChangeLog
+++ b/kde-base/kdewebdev-meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdewebdev-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdewebdev-meta/ChangeLog,v 1.84 2008/05/13 03:52:14 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdewebdev-meta/ChangeLog,v 1.85 2008/05/14 11:28:05 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdewebdev-meta-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kdewebdev-meta-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
