--- a/kde-base/kimagemapeditor/ChangeLog
+++ b/kde-base/kimagemapeditor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kimagemapeditor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kimagemapeditor/ChangeLog,v 1.81 2008/05/13 00:56:02 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kimagemapeditor/ChangeLog,v 1.82 2008/05/14 11:24:12 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kimagemapeditor-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kimagemapeditor-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
