--- a/dev-python/python-mpd/ChangeLog
+++ b/dev-python/python-mpd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-mpd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/python-mpd/ChangeLog,v 1.1 2008/05/13 23:17:41 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/python-mpd/ChangeLog,v 1.2 2008/05/14 12:15:20 fmccor Exp $
+
+  14 May 2008; Ferris McCormick <fmccor@gentoo.org> python-mpd-0.2.0.ebuild:
+  Add ~sparc keyword as part of Bug #222011.
 
 *python-mpd-0.2.0 (13 May 2008)
 
