--- a/kde-base/kcharselect/ChangeLog
+++ b/kde-base/kcharselect/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kcharselect
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcharselect/ChangeLog,v 1.76 2008/05/12 23:55:19 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcharselect/ChangeLog,v 1.77 2008/05/14 12:29:35 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kcharselect-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kcharselect-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
