--- a/kde-base/kdeartwork-icewm-themes/ChangeLog
+++ b/kde-base/kdeartwork-icewm-themes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-icewm-themes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-icewm-themes/Attic/ChangeLog,v 1.75 2008/05/13 13:34:46 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-icewm-themes/Attic/ChangeLog,v 1.76 2008/05/14 11:53:29 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdeartwork-icewm-themes-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdeartwork-icewm-themes-3.5.9.ebuild:
