--- a/kde-base/klaptopdaemon/ChangeLog
+++ b/kde-base/klaptopdaemon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/klaptopdaemon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klaptopdaemon/Attic/ChangeLog,v 1.99 2008/05/12 23:56:25 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klaptopdaemon/Attic/ChangeLog,v 1.100 2008/05/14 12:15:01 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> klaptopdaemon-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> klaptopdaemon-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
