--- a/kde-base/kregexpeditor/ChangeLog
+++ b/kde-base/kregexpeditor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kregexpeditor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kregexpeditor/Attic/ChangeLog,v 1.82 2008/05/13 00:07:25 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kregexpeditor/Attic/ChangeLog,v 1.83 2008/05/14 12:10:31 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kregexpeditor-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kregexpeditor-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
