--- a/kde-base/networkstatus/ChangeLog
+++ b/kde-base/networkstatus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/networkstatus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/networkstatus/Attic/ChangeLog,v 1.83 2008/05/13 00:46:38 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/networkstatus/Attic/ChangeLog,v 1.84 2008/05/14 13:13:09 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> networkstatus-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> networkstatus-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
