--- a/kde-base/kdepim-kioslaves/ChangeLog
+++ b/kde-base/kdepim-kioslaves/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepim-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kioslaves/Attic/ChangeLog,v 1.101 2008/05/12 22:44:32 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kioslaves/Attic/ChangeLog,v 1.102 2008/05/14 13:25:50 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdepim-kioslaves-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdepim-kioslaves-3.5.9.ebuild:
