--- a/kde-base/certmanager/ChangeLog
+++ b/kde-base/certmanager/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/certmanager
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/certmanager/Attic/ChangeLog,v 1.101 2008/05/12 22:42:07 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/certmanager/Attic/ChangeLog,v 1.102 2008/05/14 14:06:12 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> certmanager-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> certmanager-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
