--- a/kde-base/kdepim-kresources/ChangeLog
+++ b/kde-base/kdepim-kresources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepim-kresources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kresources/ChangeLog,v 1.92 2008/05/13 14:31:10 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kresources/ChangeLog,v 1.93 2008/05/14 14:50:08 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdepim-kresources-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdepim-kresources-3.5.9.ebuild:
