--- a/kde-base/kmail/ChangeLog
+++ b/kde-base/kmail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmail/ChangeLog,v 1.133 2008/05/13 14:24:28 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmail/ChangeLog,v 1.134 2008/05/14 15:13:37 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kmail-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kmail-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
