--- a/kde-base/kmailcvt/ChangeLog
+++ b/kde-base/kmailcvt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmailcvt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmailcvt/Attic/ChangeLog,v 1.75 2008/05/12 21:13:38 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmailcvt/Attic/ChangeLog,v 1.76 2008/05/14 15:08:37 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kmailcvt-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kmailcvt-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
