--- a/kde-base/kode/ChangeLog
+++ b/kde-base/kode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kode
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kode/Attic/ChangeLog,v 1.72 2008/05/12 21:14:16 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kode/Attic/ChangeLog,v 1.73 2008/05/14 14:47:41 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kode-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kode-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
