--- a/kde-base/kppp/ChangeLog
+++ b/kde-base/kppp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kppp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kppp/ChangeLog,v 1.91 2008/05/12 23:23:19 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kppp/ChangeLog,v 1.92 2008/05/14 16:12:48 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kppp-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kppp-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
