--- a/gnome-base/gnome-volume-manager/ChangeLog
+++ b/gnome-base/gnome-volume-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-volume-manager
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-volume-manager/Attic/ChangeLog,v 1.103 2008/03/26 21:35:25 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-volume-manager/Attic/ChangeLog,v 1.104 2008/05/14 16:34:02 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  gnome-volume-manager-2.22.1.ebuild:
+  Removed ~ppc64 until >=gnome-base/gnome-mount-0.6 can be marked ~ppc64
 
 *gnome-volume-manager-2.22.1 (26 Mar 2008)
 
