--- a/kde-base/librss/ChangeLog
+++ b/kde-base/librss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/librss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/librss/Attic/ChangeLog,v 1.63 2008/05/12 21:02:52 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/librss/Attic/ChangeLog,v 1.64 2008/05/14 16:35:27 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> librss-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> librss-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
