--- a/kde-base/artsplugin-audiofile/ChangeLog
+++ b/kde-base/artsplugin-audiofile/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-audiofile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/artsplugin-audiofile/Attic/ChangeLog,v 1.63 2008/05/13 13:51:32 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/artsplugin-audiofile/Attic/ChangeLog,v 1.64 2008/05/14 17:28:58 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  artsplugin-audiofile-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   artsplugin-audiofile-3.5.9.ebuild:
