--- a/kde-base/artsplugin-xine/ChangeLog
+++ b/kde-base/artsplugin-xine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-xine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/artsplugin-xine/Attic/ChangeLog,v 1.76 2008/05/13 13:50:52 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/artsplugin-xine/Attic/ChangeLog,v 1.77 2008/05/14 17:26:56 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  artsplugin-xine-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> artsplugin-xine-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
