--- a/kde-base/kdemultimedia-kappfinder-data/ChangeLog
+++ b/kde-base/kdemultimedia-kappfinder-data/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-kappfinder-data
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kappfinder-data/Attic/ChangeLog,v 1.82 2008/05/13 00:35:48 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kappfinder-data/Attic/ChangeLog,v 1.83 2008/05/14 17:08:43 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdemultimedia-kappfinder-data-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdemultimedia-kappfinder-data-3.5.9.ebuild:
