--- a/kde-base/kdemultimedia-kfile-plugins/ChangeLog
+++ b/kde-base/kdemultimedia-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/Attic/ChangeLog,v 1.85 2008/05/13 00:34:54 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/Attic/ChangeLog,v 1.86 2008/05/14 17:06:38 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdemultimedia-kfile-plugins-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdemultimedia-kfile-plugins-3.5.9.ebuild:
