--- a/kde-base/krec/ChangeLog
+++ b/kde-base/krec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/krec
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/krec/Attic/ChangeLog,v 1.87 2008/05/13 02:54:33 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/krec/Attic/ChangeLog,v 1.88 2008/05/14 17:15:12 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> krec-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> krec-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
