--- a/kde-base/kpdf/ChangeLog
+++ b/kde-base/kpdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpdf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpdf/Attic/ChangeLog,v 1.159 2008/05/13 13:41:30 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpdf/Attic/ChangeLog,v 1.160 2008/05/14 17:55:03 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kpdf-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kpdf-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
