--- a/kde-base/kruler/ChangeLog
+++ b/kde-base/kruler/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kruler
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kruler/ChangeLog,v 1.85 2008/05/13 02:20:09 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kruler/ChangeLog,v 1.86 2008/05/14 17:50:45 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kruler-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kruler-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
