--- a/kde-base/kdegraphics-meta/ChangeLog
+++ b/kde-base/kdegraphics-meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdegraphics-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegraphics-meta/ChangeLog,v 1.96 2008/05/13 14:09:23 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegraphics-meta/ChangeLog,v 1.97 2008/05/14 18:44:06 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org>
+  kdegraphics-meta-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org>
   kdegraphics-meta-3.5.9.ebuild:
