--- a/kde-base/kspaceduel/ChangeLog
+++ b/kde-base/kspaceduel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kspaceduel
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kspaceduel/ChangeLog,v 1.88 2008/05/13 03:08:34 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kspaceduel/ChangeLog,v 1.89 2008/05/14 18:58:23 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kspaceduel-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kspaceduel-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
