--- a/kde-base/kwin4/ChangeLog
+++ b/kde-base/kwin4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kwin4
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kwin4/Attic/ChangeLog,v 1.83 2008/05/13 03:08:08 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kwin4/Attic/ChangeLog,v 1.84 2008/05/14 18:53:39 corsair Exp $
+
+  14 May 2008; Markus Rothe <corsair@gentoo.org> kwin4-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kwin4-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
