--- a/sys-auth/pam_ssh_agent/ChangeLog
+++ b/sys-auth/pam_ssh_agent/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/pam_ssh_agent
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/pam_ssh_agent/Attic/ChangeLog,v 1.7 2008/05/15 01:32:03 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-auth/cvs-repo/gentoo-x86/sys-auth/pam_ssh_agent/Attic/ChangeLog,v 1.8 2008/05/15 01:33:02 flameeyes Exp $
+
+  15 May 2008; Diego Pettenò <flameeyes@gentoo.org>
+  pam_ssh_agent-0.2-r1.ebuild:
+  Quote variables.
 
   15 May 2008; Diego Pettenò <flameeyes@gentoo.org>
   pam_ssh_agent-0.2-r1.ebuild:
