--- a/kde-base/keduca/ChangeLog
+++ b/kde-base/keduca/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/keduca
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/keduca/Attic/ChangeLog,v 1.80 2008/05/13 01:41:42 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/keduca/Attic/ChangeLog,v 1.81 2008/05/15 06:17:36 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> keduca-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> keduca-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
