--- a/kde-base/kiten/ChangeLog
+++ b/kde-base/kiten/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kiten
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kiten/ChangeLog,v 1.87 2008/05/13 01:39:33 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kiten/ChangeLog,v 1.88 2008/05/15 06:33:36 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kiten-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kiten-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
