--- a/kde-base/klatin/ChangeLog
+++ b/kde-base/klatin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/klatin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klatin/Attic/ChangeLog,v 1.84 2008/05/13 03:45:52 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klatin/Attic/ChangeLog,v 1.85 2008/05/15 06:15:33 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> klatin-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> klatin-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
