--- a/kde-base/kpercentage/ChangeLog
+++ b/kde-base/kpercentage/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpercentage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpercentage/Attic/ChangeLog,v 1.85 2008/05/13 01:44:10 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpercentage/Attic/ChangeLog,v 1.86 2008/05/15 06:37:59 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kpercentage-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kpercentage-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
