--- a/kde-base/kalzium/ChangeLog
+++ b/kde-base/kalzium/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kalzium
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalzium/ChangeLog,v 1.93 2008/05/13 03:43:40 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalzium/ChangeLog,v 1.94 2008/05/15 06:54:30 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kalzium-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kalzium-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
