--- a/kde-base/kanagram/ChangeLog
+++ b/kde-base/kanagram/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kanagram
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.63 2008/05/13 01:48:40 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.64 2008/05/15 06:58:40 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kanagram-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kanagram-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
