--- a/kde-base/kdeedu-meta/ChangeLog
+++ b/kde-base/kdeedu-meta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeedu-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeedu-meta/ChangeLog,v 1.92 2008/05/13 03:56:21 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeedu-meta/ChangeLog,v 1.93 2008/05/15 07:08:10 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kdeedu-meta-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kdeedu-meta-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
