--- a/kde-base/ksystraycmd/ChangeLog
+++ b/kde-base/ksystraycmd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksystraycmd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ksystraycmd/ChangeLog,v 1.73 2008/05/13 01:17:27 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ksystraycmd/ChangeLog,v 1.74 2008/05/15 07:27:47 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> ksystraycmd-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> ksystraycmd-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
