--- a/kde-base/kxkb/ChangeLog
+++ b/kde-base/kxkb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kxkb
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/ChangeLog,v 1.101 2008/05/13 01:16:10 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/ChangeLog,v 1.102 2008/05/15 07:19:49 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kxkb-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   13 May 2008; Jeroen Roovers <jer@gentoo.org> kxkb-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
