--- a/kde-base/kdialog/ChangeLog
+++ b/kde-base/kdialog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdialog
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdialog/ChangeLog,v 1.79 2008/05/12 21:07:40 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdialog/ChangeLog,v 1.80 2008/05/15 10:28:36 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kdialog-3.5.9-r1.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Jeroen Roovers <jer@gentoo.org> kdialog-3.5.9-r1.ebuild:
   Stable for HPPA (bug #221063).
